--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tiptap/extension-text": "^2.9.1",
     "@tiptap/react": "^2.9.1",
     "@tiptap/starter-kit": "^2.9.1",
+    "@uploadthing/react": "^7.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "jsonwebtoken": "^9.0.2",
@@ -32,7 +33,8 @@
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^7.3.0"
   },
   "devDependencies": {
     "eslint": "^8",
