--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.460.0",
     "mongoose": "^8.8.1",
-    "next": "15.0.3",
+    "next": "14.0.1",
     "next-themes": "^0.4.3",
     "nextjs-toploader": "^3.7.15",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
