--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "nextjs-toploader": "^3.7.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-quill": "^2.0.0",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
