--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lucide-react": "^0.460.0",
     "mongoose": "^8.8.1",
     "next": "15.0.3",
+    "next-fonts": "^1.5.1",
     "next-themes": "^0.4.3",
     "nextjs-toploader": "^3.7.15",
     "react": "19.0.0-rc-66855b96-20241106",
