--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "nextjs-toploader": "^3.7.15",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-medium-image-zoom": "^5.2.11",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
