--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "embla-carousel-react": "^8.5.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.460.0",
+    "moment": "^2.30.1",
     "mongoose": "^8.8.1",
     "next": "15.0.3",
     "next-fonts": "^1.5.1",
