--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@uploadthing/react": "^7.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel": "^8.5.1",
     "embla-carousel-react": "^8.5.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.460.0",
@@ -36,6 +37,7 @@
     "nextjs-toploader": "^3.7.15",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-phone-input-2": "^2.15.1",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
