--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "next-fonts": "^1.5.1",
     "next-themes": "^0.4.3",
     "nextjs-toploader": "^3.7.15",
+    "nodemailer": "^6.9.16",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-phone-input-2": "^2.15.1",
