--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-phone-input-2": "^2.15.1",
+    "react-quill": "^2.0.0",
+    "react-quill-new": "^3.3.3",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
