--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^15.1.5",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-label": "^2.1.0",
@@ -30,7 +31,7 @@
     "lucide-react": "^0.460.0",
     "moment": "^2.30.1",
     "mongoose": "^8.8.1",
-    "next": "15.0.3",
+    "next": "^15.1.5",
     "next-fonts": "^1.5.1",
     "next-themes": "^0.4.3",
     "nextjs-toploader": "^3.7.15",
