--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@tawk.to/tawk-messenger-react": "^2.0.2",
     "@uploadthing/react": "^7.1.1",
     "ckeditor4-react": "1.2.0",
     "ckeditor4-react-advanced": "1.1.7",
