--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "lucide-react": "^0.460.0",
     "moment": "^2.30.1",
     "mongoose": "^8.8.1",
-    "next": "^15.1.5",
+    "next": "15.0.3",
     "next-fonts": "^1.5.1",
     "next-themes": "^0.4.3",
     "nextjs-toploader": "^3.7.15",
