--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-phone-input-2": "^2.15.1",
     "react-tagsinput": "^3.20.3",
+    "sharp": "^0.33.5",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
