--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,7 +32,7 @@ jobs:
         cache: 'npm'
     
     - name: Install dependencies     
-      run: npm ci
+      run: npm ci --legacy-peer-deps 
       
     - name: Build app
       run: npm run build --if-present
