--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,16 +10,16 @@ jobs:
       matrix:
         node-version: [20.18.2]
     
-    env:
-      MONGODB_URI: ${{ secrets.MONGODB_URI }}
-      JWT_SECRET: ${{ secrets.JWT_SECRET }}
-      UPLOADTHING_TOKEN: ${{ secrets.UPLOADTHING_TOKEN }}
-      EMAIL_FROM: ${{ secrets.EMAIL_FROM }}
-      EMAIL_TO: ${{ secrets.EMAIL_TO }}
-      EMAIL_TO2: ${{ secrets.EMAIL_TO2 }}
-      EMAIL_USERNAME: ${{ secrets.EMAIL_USERNAME }}
-      EMAIL_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
-      EMAIL_HOST: ${{ secrets.EMAIL_HOST }}
+    # env:
+    #   MONGODB_URI: ${{ secrets.MONGODB_URI }}
+    #   JWT_SECRET: ${{ secrets.JWT_SECRET }}
+    #   UPLOADTHING_TOKEN: ${{ secrets.UPLOADTHING_TOKEN }}
+    #   EMAIL_FROM: ${{ secrets.EMAIL_FROM }}
+    #   EMAIL_TO: ${{ secrets.EMAIL_TO }}
+    #   EMAIL_TO2: ${{ secrets.EMAIL_TO2 }}
+    #   EMAIL_USERNAME: ${{ secrets.EMAIL_USERNAME }}
+    #   EMAIL_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
+    #   EMAIL_HOST: ${{ secrets.EMAIL_HOST }}
       
     steps:
     - name: Checkout Repository 
@@ -37,15 +37,31 @@ jobs:
     - name: Build app
       run: npm run build --if-present
     
-    - name: Deploy to VPS 
-      uses: appleboy/ssh-action@master
+    - name: Deploy to VPS
+      uses: appleboy/ssh-action@v0.1.3
       with:
         host: ${{ secrets.HOSTINGER_VPS_HOST }}
         username: ${{ secrets.HOSTINGER_VPS_USERNAME }}
         key: ${{ secrets.HOSTINGER_VPS_SSH_PRIVATE_KEY }}
         script: |
-          cd /home/root/chronicles-exhibits/
-          git pull origin main
-          npm ci
-          npm run build
-          pm2 restart all
+          cd /home/root/chronicles-exhibits/ || exit 1
+          git pull origin main || exit 1
+    
+          # Create .env.local file with environment variables
+          echo "MONGODB_URI=${{ secrets.MONGODB_URI }}" > .env.local
+          echo "JWT_SECRET=${{ secrets.JWT_SECRET }}" >> .env.local
+          echo "UPLOADTHING_TOKEN=${{ secrets.UPLOADTHING_TOKEN }}" >> .env.local
+          echo "EMAIL_FROM=${{ secrets.EMAIL_FROM }}" >> .env.local
+          echo "EMAIL_TO=${{ secrets.EMAIL_TO }}" >> .env.local
+          echo "EMAIL_TO2=${{ secrets.EMAIL_TO2 }}" >> .env.local
+          echo "EMAIL_USERNAME=${{ secrets.EMAIL_USERNAME }}" >> .env.local
+          echo "EMAIL_PASSWORD=${{ secrets.EMAIL_PASSWORD }}" >> .env.local
+          echo "EMAIL_HOST=${{ secrets.EMAIL_HOST }}" >> .env.local
+    
+          # Install dependencies and build the app
+          npm ci || exit 1
+          npm run build || exit 1
+    
+          # Restart the application using PM2
+          pm2 restart all || exit 1
+
