--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,4 +1,5 @@
 name: Node.js CI
+
 on:
   push:
     branches: [ "main" ]
@@ -9,34 +10,23 @@ jobs:
     strategy:
       matrix:
         node-version: [20.18.2]
-    
-    # env:
-    #   MONGODB_URI: ${{ secrets.MONGODB_URI }}
-    #   JWT_SECRET: ${{ secrets.JWT_SECRET }}
-    #   UPLOADTHING_TOKEN: ${{ secrets.UPLOADTHING_TOKEN }}
-    #   EMAIL_FROM: ${{ secrets.EMAIL_FROM }}
-    #   EMAIL_TO: ${{ secrets.EMAIL_TO }}
-    #   EMAIL_TO2: ${{ secrets.EMAIL_TO2 }}
-    #   EMAIL_USERNAME: ${{ secrets.EMAIL_USERNAME }}
-    #   EMAIL_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
-    #   EMAIL_HOST: ${{ secrets.EMAIL_HOST }}
-      
+
     steps:
-    - name: Checkout Repository 
+    - name: Checkout Repository
       uses: actions/checkout@v4
-    
+
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    
-    - name: Install dependencies     
-      run: npm ci --legacy-peer-deps 
-      
+
+    - name: Install dependencies
+      run: npm ci --legacy-peer-deps
+
     - name: Build app
       run: npm run build --if-present
-    
+
     - name: Deploy to VPS
       uses: appleboy/ssh-action@v0.1.3
       with:
@@ -46,8 +36,8 @@ jobs:
         script: |
           cd /home/root/chronicles-exhibits/ || exit 1
           git pull origin main || exit 1
-    
-          # Create .env.local file with environment variables
+          
+          # Create .env.local file
           echo "MONGODB_URI=${{ secrets.MONGODB_URI }}" > .env.local
           echo "JWT_SECRET=${{ secrets.JWT_SECRET }}" >> .env.local
           echo "UPLOADTHING_TOKEN=${{ secrets.UPLOADTHING_TOKEN }}" >> .env.local
@@ -57,11 +47,7 @@ jobs:
           echo "EMAIL_USERNAME=${{ secrets.EMAIL_USERNAME }}" >> .env.local
           echo "EMAIL_PASSWORD=${{ secrets.EMAIL_PASSWORD }}" >> .env.local
           echo "EMAIL_HOST=${{ secrets.EMAIL_HOST }}" >> .env.local
-    
-          # Install dependencies and build the app
+
           npm ci --legacy-peer-deps || exit 1
           npm run build || exit 1
-    
-          # Restart the application using PM2
           pm2 restart all || exit 1
-
