--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,13 +20,19 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-        
-    - name: Deploy to VPS
+
+    - name: Install dependencies
+      run: npm ci --legacy-peer-deps
+
+    - name: Build app
+      run: npm run build --if-present
+
+    - name: Deploy to VPS using password
       uses: appleboy/ssh-action@v0.1.3
       with:
         host: ${{ secrets.HOSTINGER_VPS_HOST }}
         username: ${{ secrets.HOSTINGER_VPS_USERNAME }}
-        key: ${{ secrets.HOSTINGER_VPS_SSH_PRIVATE_KEY }}
+        password: ${{ secrets.HOSTINGER_VPS_PASSWORD }}
         script: |
           cd /home/root/chronicles-exhibits/ || exit 1
           git pull origin main || exit 1
@@ -41,7 +47,7 @@ jobs:
           echo "EMAIL_USERNAME=${{ secrets.EMAIL_USERNAME }}" >> .env.local
           echo "EMAIL_PASSWORD=${{ secrets.EMAIL_PASSWORD }}" >> .env.local
           echo "EMAIL_HOST=${{ secrets.EMAIL_HOST }}" >> .env.local
-
+    
           npm ci --legacy-peer-deps || exit 1
           npm run build || exit 1
           pm2 restart all || exit 1
