--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -42,6 +42,6 @@ jobs:
           echo "EMAIL_PASSWORD=${{ secrets.EMAIL_PASSWORD }}" >> .env.local
           echo "EMAIL_HOST=${{ secrets.EMAIL_HOST }}" >> .env.local
     
-          npm ci --legacy-peer-deps || exit 1
+          npm install --legacy-peer-deps || exit 1
           npm run build || exit 1
           pm2 restart all || exit 1
