--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "next-themes": "^0.4.3",
     "nextjs-toploader": "^3.7.15",
     "nodemailer": "^6.9.16",
+    "qrcode.react": "^4.2.0",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-phone-input-2": "^2.15.1",
