--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "crypto": "^1.0.1",
     "embla-carousel": "^8.5.1",
     "embla-carousel-react": "^8.5.1",
     "fslightbox-react": "^1.7.6",
